--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "eslint './**/*.ts{,x}'"
   },
   "dependencies": {
+    "mongodb": "^3.6.3",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "shortid": "^2.2.16",
+    "unfetch": "^4.2.0"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
+    "@types/shortid": "^0.0.29",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
